--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet" href="http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <style>
+        @media (min-width: 980px){
+            body{
+                padding-top: 60px;
+            }
+            .linediv-l {
+                border-right: 1px white solid;
+            }
+            .linediv-r {
+                border-left: 1px white solid;
+            }
+        }
+
+        @media (max-width: 480px){
+            .copy{
+                padding: 2.5% 10%;
+            }
+            .linediv-l {
+                border-bottom: 1px white solid;
+            }
+            .linediv-r {
+                border-top: 1px white solid;
+            }
+        }
         body {
-            padding-top: 20px;
-            padding-bottom: 40px;
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        }
+        .heading, .subheading{
+            font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+            text-align: center;
+        }
+        p.lead{
+            padding-top: 1.5%;
+            font-size: 24px;
+            line-height: 30px;
         }
         .container {
             width: 960px;
@@ -15,13 +47,30 @@
         p.lead {
             padding-top: 15px;
         }
-        .navigation, .pitch, .section1, .section2, .faq, .footer {
-            padding: 10px 0px 10px 0px;
+        p {
+            font-size: 18px;
+            line-height: 24px;
         }
-        .video, .therometer, .order, .social {
-            border: 1px dotted;
+
+        .pitch{
+            padding: 2.5% 0%;
+        }
+        .order {
+            padding: 2% 0%;
+        }
+        .actions {
+            background-color: #343434;
+            padding: 3% 0%;
+        }
+        .video, .therometer, .order, .social, .statistics {
             text-align: center;
         }
+
+        .statistics h3, .statistics p {
+            color: white;
+        }
+
+        /*This code will create a very werid overlap behavior
         .video {
             height: 124px;
             line-height: 124px;
@@ -29,7 +78,7 @@
         .therometer, .order, .social {
             height: 40px;
             line-height: 40px;
-        }
+        }*/
         div.row {
             border: 1px solid;
         }
@@ -37,44 +86,70 @@
     </style>
 </head>
 <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
     <div class="container">
-        <div class="row navigation">
-            <div class="span2 logo">
-                Logo
-            </div>
-            <div class="span6 blank">
-                Blank
-            </div>
-            <div class="span4 about">
-                About
-            </div>
-        </div>
-
-        <div class="row heading">
+        <div class="row-fluid  heading">
             <div class="span12">
-                <h1>Bitstater Title</h1>
+                <h1>Product</h1>
             </div>
         </div>
 
-        <div class="row subheading">
+        <div class="row-fluid subheading">
             <div class="span12">
                 <p class="lead">This is my first bitstater project.</p>
             </div>
         </div>
 
-        <div class="row pitch">
-            <div class="span6 video">
-                Video
+        <div class="row-fluid pitch">
+            <div class="span5 offset1 video">
+                <img class="img-polaroid" src="http://placehold.it/480x300">
             </div>
-            <div class="span6">
-                <div class="thermometer">
-                    Thermometer
+
+            <div class="span5 actions">
+                <div class="span8 offset2">
+                    <div class="statistics">
+                        <div class="span4">
+                            <div class="linediv-l">
+                            <h3>1000</h3> <p>backers</p>
+                            </div>
+                        </div>
+                        <div class="span4">
+                            <div class="linediv-c">
+                            <h3>$6000</h3> <p>of $10,000</p>
+                            </div>
+                        </div>
+                        <div class="span4">
+                            <div class="linediv-r">
+                            <h3>10</h3> <p>days left</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="order">
-                    Order
-                </div>
-                <div class="social">
-                    Social
+
+                <div class="span10 offset1">
+                    <div class="thermometer progress active">
+                        <div class="bar bar-success" style="width: 60%;"></div>
+                        <div class="bar bar-warning" style="width: 40%;"></div>
+                    </div>
                 </div>
             </div>
         </div>
