--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link type="text/css" rel="stylesheet" href="http://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <link type="text/css" rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+
     <style>
         @media (min-width: 980px){
             body{
@@ -150,6 +153,17 @@
                         <div class="bar bar-success" style="width: 60%;"></div>
                         <div class="bar bar-warning" style="width: 40%;"></div>
                     </div>
+                </div>
+                <div class="span6 offset3 order">
+                    <button class="btn btn-success btn-larger">Preorder</button>
+                </div>
+                <div class="span8 offset2 social">
+                    <button class="btn btn-twitter">
+                        <i class="icon-twitter"></i> | Twitter
+                    </button>
+                     <button class="btn btn-facebook">
+                        <i class="icon-facebook"></i> | Facebook
+                    </button>
                 </div>
             </div>
         </div>
