--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
             color: white;
         }
 
+        .copy {
+            padding-top: 2.5%;
+            padding-bottom: 2.5%;
+            text-align: justify;
+        }
+        .asset {
+            padding: 2.5% 0%;
+        }
+
         /*This code will create a very werid overlap behavior
         .video {
             height: 124px;
@@ -82,9 +91,9 @@
             height: 40px;
             line-height: 40px;
         }*/
-        div.row {
+        d/*iv.row {
             border: 1px solid;
-        }
+        }*/
 
     </style>
 </head>
@@ -168,9 +177,25 @@
             </div>
         </div>
 
-        <div class="row section1">
-            <div class="span12">
-                Marketing Section 1
+        <div class="row-fluid section1">
+            <div class="span5 offset1 asset">
+                <img src="http://placehold.it/480x300" class="img-polaroid">
+            </div>
+            <div class="span5 copy">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, qui, vitae, vero fugit amet odio debitis possimus assumenda laudantium at dicta eligendi accusantium omnis fugiat adipisci magni alias dolor a nihil sint modi ex molestias quasi cumque accusamus provident sit libero officiis corrupti doloribus perspiciatis facilis porro nulla neque reiciendis.
+                </p>
+            </div>
+        </div>
+
+        <div class="row-fluid section2">
+            <div class="span5 offset1 copy copy-right">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, voluptatem, et, nulla facere minus nam dolor nesciunt tenetur earum unde esse tempore aspernatur beatae quam ratione vero modi adipisci quis officia voluptatibus itaque possimus amet error aliquam similique cupiditate temporibus sequi sit sunt vitae. Harum nihil cum aut ipsa fuga.
+                </p>
+            </div>
+            <div class="span5 asset">
+                <img src="http://placehold.it/480x300" class="img-polaroid">
             </div>
         </div>
         <div class="row section2">
