Add footer and done! Oh YEAH

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 
     <style>
         @media (min-width: 980px){
@@ -82,6 +84,16 @@
         }
         .asset {
             padding: 2.5% 0%;
+        }
+        .footer {
+            color: #cccccc;
+            text-align: center;
+        }
+        .footer p {
+            font-size: 11px;
+        }
+        .footer a {
+            color: #ccccff;
         }
 
         /*This code will create a very werid overlap behavior
@@ -206,7 +218,7 @@
                 <h3>FAQ</h3>
                 <div class="accordion" id="accordion2">
                     <div class="accordion-group">
-                        <div class="accordion-deading">
+                        <div class="accordion-heading">
                             <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion2" class="accordion-toggle">
                                 What does FAQ stand for?
                             </a>
@@ -218,10 +230,11 @@
                         </div>
                     </div>
                     <div class="accordion-group">
-                        <div class="accordion-deading"></div>
+                        <div class="accordion-heading">
                             <a href="#collapseTwo" data-toggle="collapse" data-parent="#accordion2" class="accordion-toggle">
                                 What's a Freuqently Asked Question?
                             </a>
+                        </div>
                         <div id="collapseTwo" class="accordion-body collpase">
                             <div class="accordion-inner">
                                 A question which is commonly asked by users.
@@ -232,9 +245,13 @@
             </div>
         </div>
 
-        <div class="row footer">
-            <div class="span1">
-                Footer
+        <div class="row-fluid footer">
+            <div class="span12">
+                  <p>This work is licensed under
+                    the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+                      By-SA 3.0
+                    </a>, without all the cruft that would otherwise be
+                    put at the bottom of the page.</p>
             </div>
         </div>
     </div>
